# video-player

./: .gitmodules  CMakeLists.txt  Effect.h  EffectsImplementations.h  GLWidget.cpp  GLWidget.h  README.md  ScriptHandler.cpp  ScriptHandler.h  SettingsWindow.cc  SettingsWindow.h  Style.h  Switch.cpp  Switch.h  VideoConvert.h  VideoPlayback.cpp  VideoPlayback.h  VideoPlayer.cpp  VideoPlayer.h  glwidget.cpp  glwidget.h  helper.cpp  helper.h  main.cpp  video_shower.cpp
custom_buttons/: Style.h  Switch.cpp
example-scripts/: script.lua  script2.lua  script_bgr.lua
playback/: ImageLoad.cpp  ImageLoad.h  VideoConvert.cpp  VideoConvert.h  VideoPlayback.cpp  VideoPlayback.h
